# webos-userland

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: docs.yml
include/: AcbAPI.h  webos-extension.h  webos-foreign.h  webos-input-manager.h  webos-shell.h  webos-surface-group.h  webos-tablet.h
include/appswitching-control-block/: AcbAPI.h
include/dile/: README.md  dile_audio_direct.h  dile_vdec_direct.h  dile_vt.h
include/lgncopenapi/: lgnc.h  lgnc_directaudio.h  lgnc_directvideo.h  lgnc_dl.h  lgnc_egl.h  lgnc_gamepad.h  lgnc_openapi_types.h  lgnc_plugin.h  lgnc_system.h
include/libndl-media/: NDL_directmedia.h  NDL_directmedia_types.h  NDL_directmedia_v2.h
include/media-resource-calculator/: resource_calculator_c.h
include/ndl-directmedia2/: esplayer-api.h  media-types.h
include/player-factory/: abstractplayer.hpp  common.hpp  custompipeline.hpp  customplayer.hpp  pipeline.hpp  player.hpp
include/starfish-media-apis/: StarfishMediaAPIs.hpp
include/starfish-media-pipeline/: StarfishMediaAPIs.h
include/svp/inband/: inband_serializer.h
include/webos-helpers/: libhelpers.h
include/xkbcommon/: xkbcommon-webos-keysyms.h
share/pkgconfig/: AcbAPI.pc  NDL_directmedia.pc  dile_audio_direct.pc  dile_boardinfo.pc  dile_vdec_direct.pc  dile_vt.pc  egl.pc  glesv1_cm.pc  glesv2.pc  helpers.pc  lgncopenapi.pc  libndl-directmedia2.pc  libpf-1.0.pc  libplayerAPIs.pc  libsvp_inband_serializer.pc  media-resource-calculator.pc  ndl_directmedia.pc  wayland-egl.pc  wayland-webos-client.pc
src/: AcbAPI.lds  EGL.c  GLESv2.lds  NDL_directmedia.lds  dile_audio_direct.lds  dile_boardinfo.lds  dile_vdec_direct.lds  dile_vt.lds  dummy.c  hal_vfe.lds  helpers.lds  lgncopenapi.lds  media-resource-calculator.lds  ndl-directmedia2.lds  pf-1.0.lds  playerAPIs.lds  svp_inband_serializer.lds  wayland-egl.lds  wayland-webos-client.lds
